fix post width overflow

--- a/post/post-detail.style.css
+++ b/post/post-detail.style.css
@@ -28,6 +28,7 @@
 .post {
   display: flex;
   flex-direction: column;
+  max-width: calc(100% - 16rem);
   width: 100%;
   align-items: center;
 }
